# code-comprehension

./: .gitmodules  CMakeLists.txt
extlibs/: CMakeLists.txt
src/: CMakeLists.txt  codecomprehensionengine.cc  codecomprehensionengine.hh  filedb.cc  filedb.hh  main.cc  types.hh
src/cpp/: cppcomprehensionengine.cc  cppcomprehensionengine.hh
test/: AST.cpp  complete_includes.cc  complete_local_args.cc  complete_local_vars.cc  complete_type.cc  find_array_variable_declaration.cc  find_function_declaration.cc  find_symbol_in_namespace.cc  find_variable_declaration.cc  parameters_hint1.cc  sample_header.hh
